  * Don't install duplicate copies of console-setup-apply,
    localechooser-apply, and netcfg-wrapper.
  * Bump fallback Ubuntu version number in ubi-language to 11.10.

  [ Stéphane Graber ]
  * Update ubiquity-dm to export self.username as SUDO_USER.
    Make gsettings work properly later on during the install.
  * Whenever we call wget, set --tries=1 instead of the default
    of 20.

 -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 05 Oct 2011 17:19:37 -0400

ubiquity (2.8.3) oneiric; urgency=low

  * Skip LTSP from the list of networks to copy to the target.
    This is a temporary network created by Edubuntu's LTSP live.
  * Fix PROXY url as the gsettings host key already contains http://
  * Only disable set the gsettings keys once in gtk_ui (LP: #657086)
  * Properly handle keys in gsettings that are empty/not set.
  * Don't crash when the no-proxy list is empty. (LP: #867620)
  * Clear the console just before killing X in ubiquity-dm. (LP: #813065)

 -- Stéphane Graber <stgraber@ubuntu.com>  Tue, 04 Oct 2011 21:01:09 -0400

ubiquity (2.8.2) oneiric; urgency=low

  [ Colin Watson ]
  * Preserve ordering of disks returned by partman-auto rather than
    shuffling them based on dictionary ordering (LP: #770711).  This uses
    collections.OrderedDict, which requires Python >= 2.7.
  * Run only those parts of oem-config-prepare that require root access as
    root; in particular displaying confirmation dialogs is now done as the
    calling user, which avoids KDE confusion (LP: #856418).
  * Go back to killing update-apt-cache's process group, but this time make
    sure that it's in a separate process group and make more of an effort to
    ensure that it terminates (LP: #743359).
  * Update translations from Launchpad.

  [ Stéphane Graber ]
  * Make ubiquity also update gsettings (LP: #800760)
    - Add a new gsettings module similar to the gconftool one
    - Update ubiquity-dm for gconf to gsettings migration
    - Get PROXY configuration from gsettings